# test_framework_QA3

./: .env.example  .gitignore  .pylintrc  LICENSE  README.md  conftest.py  main.js  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/prod/: .env.example
config/staging/: .env.example
data/test_data/: products.json  users.csv  users.json
doc/diagrams/component diagram/: aditable.drawio
doc/optimization/: parallel-tests-results.md
docs/: DATA_PROVIDER_DOCUMENTATION.md  EXAMPLES_DATA_PROVIDER.py
docs/architecture/: current-architecture.md
docs/architecture/Execution-Flow-Diagram/: editable.drawio
docs/architecture/General-Architecture-Diagram/: editable.drawio
docs/architecture/class-diagram/: Settings.md
docs/demo-final/: README.md  bottlenecks-and-risks.md  executive-summary.md  performance-results.md  test-results.md
docs/guides/: framework_layers_and_components.md  logger_documentation.md  report_manager_flow.md  schema_validation.md
docs/suggestion_for_improvement/: issue_12_analise_e_sugestoes.md  issue_25_auditoria_completa_framework.md  suggestion_atv3_lab7.md
environments/prod/: .env.example
environments/staging/: .env.example
src/config/: config.py  data_provider_config.py  logging_config.py  settings.py
src/infraestructure/: logger.py  requestManager.js  request_manager.py
src/infrastructure/: __init__.py  request_manager.py
src/services/: __init__.py  auth_service.py  base_service.py  cart_service.py  main.js  product_service.py  user_service.py
src/utils/: __init__.py  data_provider.py  data_validator.py  file_reader.py
tests/: conftest.py
tests/e2e/: conftest.py  test_user_lifecycle.py
tests/integration/: conftest.py  test_api_integration.py  test_components_integration.py
tests/unit/: logger_test.py  test_request_manager.py
(+43 files in other folders)
